@@ -172,5 +172,11 @@
     "imageUrl": "https://cdn.assistantapps.com/patreon/5F5291FC7D01BA7255B77A0B9647DD04.png",
     "thumbnailUrl": "https://cdn.assistantapps.com/patreon/5F5291FC7D01BA7255B77A0B9647DD04.png",
     "url": "https://assistantapps.com"
+  },
+  {
+    "name": "HOA 1507",
+    "imageUrl": "https://ui-avatars.com/api/?size=128&name=HOA 1507",
+    "thumbnailUrl": "https://ui-avatars.com/api/?size=128&name=HOA 1507",
+    "url": "https://assistantapps.com"
   }
 ]
