@@ -6,9 +6,9 @@
     "image": "https://cdn.akamai.steamstatic.com/steamcommunity/public/images/clans/11471984/19d69b44e9d17e54773ad65dc4402179cfdaecd7.png",
     "shortDescription": "Calling all Mechanics!\nWelcome to another dev blog, full of fun news! We’ll start with something that we’ve been working\non for the next chapter, then we will share some of the things that will be included in the upcoming Challenge Mode update. En...",
     "videoLink": "",
-    "upVotes": 2378,
-    "downVotes": 23,
-    "commentCount": 338
+    "upVotes": 4419,
+    "downVotes": 57,
+    "commentCount": 613
   },
   {
     "name": "Devblog 22 is here!",
@@ -17,9 +17,9 @@
     "image": "https://cdn.akamai.steamstatic.com/steamcommunity/public/images/clans/11471984/bf78fa7eea80758188a7e95cfab72432af6d003d.png",
     "shortDescription": "Hi Mechanics!\nIt’s that special time again when we open up and show off some of the content we’ve been working on at the Scrap Mechanic H. Q. This is probably one of the most exciting devblogs we’ve done in a while, as we will be showing off our n...",
     "videoLink": "",
-    "upVotes": 8213,
-    "downVotes": 56,
-    "commentCount": 1589
+    "upVotes": 8469,
+    "downVotes": 58,
+    "commentCount": 1603
   },
   {
     "name": "Developer Q&A",
@@ -28,9 +28,9 @@
     "image": "https://cdn.akamai.steamstatic.com/steamcommunity/public/images/clans/11471984/b475def8852ba851741c54a3f78824cf5e247495.png",
     "shortDescription": "Hi Mechanics! \nWe have collected and answered a lot of your questions! The idea of this Q&. A is to be informative and to not leave you hanging, while we are working on the next chapter. \nWe have focused on your most commonly asked questions, as w...",
     "videoLink": "",
-    "upVotes": 3239,
-    "downVotes": 53,
-    "commentCount": 1522
+    "upVotes": 3309,
+    "downVotes": 54,
+    "commentCount": 1531
   },
   {
     "name": "Update 0.5.1",
@@ -39,9 +39,9 @@
     "image": "https://steamcdn-a.akamaihd.net/steamcommunity/public/images/clans/11471984/603024a52737dc0483b07166d8ea40652c91e337.png",
     "shortDescription": "Hi Mechanics!\nThe Creative Mode update is finally out and we are already looking into some additional fixes.\nToday we took care of a few reported crashes and some other issues.\nBug fixes\nFixed an issue where world builder worlds from previous vers...",
     "videoLink": "",
-    "upVotes": 2496,
-    "downVotes": 62,
-    "commentCount": 222
+    "upVotes": 2539,
+    "downVotes": 63,
+    "commentCount": 224
   },
   {
     "name": "Creative mode update 0.5.0",
@@ -50,7 +50,7 @@
     "image": "https://cdn.akamai.steamstatic.com/steamcommunity/public/images/clans/11471984/72ee9f1120482909ed3611d67d70393d13730e74.png",
     "shortDescription": "Hi Mechanics! \nCreative mode Update 050 is finally here!\nNew creative mode worlds\nWelcome to the new and updated creative mode! Not only did we make it look better to go hand in hand with the survival world but we also finally added water to the c...",
     "videoLink": "",
-    "upVotes": 2828,
+    "upVotes": 2863,
     "downVotes": 35,
     "commentCount": 279
   },
@@ -61,7 +61,7 @@
     "image": "https://steamcdn-a.akamaihd.net/steamcommunity/public/images/clans/11471984/603024a52737dc0483b07166d8ea40652c91e337.png",
     "shortDescription": "Updated March 30\nBug fixes\nFixed camera issues in the World Builder\r\n\n--------------------------------------------------------\nUpdated March 26\nBug fixes\nPlayers that had issues starting the game in the test branch should now be able to start\n\r\nGa...",
     "videoLink": "",
-    "upVotes": 3224,
+    "upVotes": 3242,
     "downVotes": 60,
     "commentCount": 390
   },
@@ -72,7 +72,7 @@
     "image": "https://cdn.akamai.steamstatic.com/steamcommunity/public/images/clans/11471984/2b4bc93ffcb93c5d257077f3216d400f533c9546.png",
     "shortDescription": "Calling all mechanics!\nNew devblog, coming through! This time, we want to focus on a few things that are coming up in the not-too-distant future and also show a few new things that are in the works for the next survival chapter.\n\n\n\nCablebot\nWatch ...",
     "videoLink": "",
-    "upVotes": 5647,
+    "upVotes": 5677,
     "downVotes": 39,
     "commentCount": 529
   },
@@ -83,9 +83,9 @@
     "image": "https://cdn.akamai.steamstatic.com/steamcommunity/public/images/clans/11471984/d0cdf95f53c1351df0e0bc8ec0a36faca818a6a6.png",
     "shortDescription": "Calling all Mechanics!\n2020 is coming to a close and we’re here to end it on a good note with a special devblog! Here are some of the things we’ve been working on since the release of Scrap Mechanic’s Survival Mode earlier this year.\nTo start, we ...",
     "videoLink": "",
-    "upVotes": 7219,
-    "downVotes": 37,
-    "commentCount": 696
+    "upVotes": 7261,
+    "downVotes": 38,
+    "commentCount": 704
   },
   {
     "name": "Update 0.4.8 is here!",
@@ -94,8 +94,8 @@
     "image": "https://cdn.akamai.steamstatic.com/steamcommunity/public/images/clans/11471984/bda97b90fe5c260fc431c0b350d5d841b4e07999.png",
     "shortDescription": "Hi Mechanics!\nWe are excited to finally drop this update!\nThis update will lay out some of the groundwork for the upcoming new survival chapter that we are working on right now. In this update we did a ton of bug fixes and improvements. We also ad...",
     "videoLink": "",
-    "upVotes": 4572,
-    "downVotes": 29,
+    "upVotes": 4588,
+    "downVotes": 30,
     "commentCount": 345
   },
   {
@@ -105,8 +105,8 @@
     "image": "https://steamcdn-a.akamaihd.net/steamcommunity/public/images/clans/11471984/603024a52737dc0483b07166d8ea40652c91e337.png",
     "shortDescription": "Hi Mechanics!\nThis test turned in to a pretty long one as you might have noticed. We ended up doing a lot of small fixes. But also because we wanted to add a few more things for testing before we drop it.\nToday the 30th of October we finally added...",
     "videoLink": "",
-    "upVotes": 1968,
-    "downVotes": 34,
+    "upVotes": 1982,
+    "downVotes": 35,
     "commentCount": 319
   }
 ]
