@@ -170,5 +170,6 @@
   "packingStation": "Packing Station",
   "foundIn": "Encontrado em",
   "home": "Home",
-  "hashCode": "A7D2876BE40165D0F97453B79841724D"
+  "creative": "Creative",
+  "hashCode": "B136613BC17D74CCD2728A6887AEE04E"
 }
