@@ -122,6 +122,7 @@ Widget viewMoreButton(context, int numLeftOver, viewMoreOnPress) {
   String viewMore = getTranslations().fromKey(LocaleKey.viewXMore);
   return Container(
     child: positiveButton(
+      context,
       title: viewMore.replaceAll("{0}", numLeftOver.toString()),
       onPress: () {
         if (viewMoreOnPress == null) return;
