@@ -1,7 +1,7 @@
 name: scrapmechanic_kurtlourens_com
 description: A companion app for Scrap Mechanic.
 publish_to: 'none'
-version: 1.7.2+46
+version: 1.7.3+47
 
 environment:
   sdk: '>=2.7.0 <3.0.0'
@@ -46,8 +46,6 @@ dependencies:
 
   # Misc
   breakpoint: 1.2.0
-  talker: 0.8.0
-  talker_flutter: 0.8.0
   shared_preferences: 2.0.13
   shared_preferences_web: 2.0.3
   shared_preferences_windows: 2.1.0
